[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/HUD/CAUTION.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/ARDESTINE.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 3
extra_spacing_char = 22
font_data = SubResource( 1 )

[node name="CAUTION" type="Label"]
margin_left = 7.0
margin_top = 30.0
margin_right = 1043.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.235294 )
custom_colors/font_outline_modulate = Color( 0.494118, 0.858824, 0.866667, 0.364706 )
text = "CAUTION"
align = 1
valign = 1
script = ExtResource( 1 )

[node name="Blinker" type="Timer" parent="."]
wait_time = 0.25

[node name="AutoSwitchOff" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Blinker" to="." method="_on_Blinker_timeout"]
[connection signal="timeout" from="AutoSwitchOff" to="." method="_on_AutoSwitchOff_timeout"]
